<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/your_profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statsSectionDivider"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_section_header"
        android:text="@string/your_stats"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_page_title"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginVertical="5dp"
        tools:text="@string/your_level"
        android:textSize="16sp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsSectionDivider" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:indeterminate="false"
        android:max="10"
        android:progress="0"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/level_image"
        app:layout_constraintTop_toBottomOf="@id/level"
        android:progressDrawable="@drawable/progress_bar"
        android:layout_marginVertical="5dp"/>

    <ImageView
        android:id="@+id/level_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level"
        app:srcCompat="@drawable/cactus1" />

    <TextView
        android:id="@+id/points_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/progress_points"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        android:layout_marginVertical="5dp" />

    <TextView
        android:id="@+id/my_articles_header"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_section_header"
        android:padding="10dp"
        android:text="@string/saved_articles"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points_to"
        android:fontFamily="@font/lato"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_articles_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_articles_header" />






</androidx.constraintlayout.widget.ConstraintLayout>