<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/home_page_heading"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#fef896"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <ImageView
        android:id="@+id/sun_image"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/sun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/carbon_image"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/carbon_image"
        android:scaleType="fitXY"
        android:src="@drawable/carbon"
        app:layout_constraintEnd_toStartOf="@id/actus"
        app:layout_constraintStart_toEndOf="@id/sun_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/actus"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cactus"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cactus"
        android:scaleType="fitXY"
        android:src="@drawable/cactus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/actus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="60dp"
        android:text="@string/empowering_gen_z_to_track_manage_and_reduce_their_fossil_fuel_intake"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carbon_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/quiz_card"
        android:layout_width="370dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="@+id/home_page_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="#c0f2a8">

        <TextView
            android:id="@+id/quiz_card_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/been_making_progress_on_your_carbon_footprint_reduction_journey"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/take_our_quiz"
            android:background="@drawable/quiz_btn"
            />

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>